demoProject/convert/objects/Employee__c.object
<CustomObject>
    <label>Employee</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_SFDC_User_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Level__c</fullName>
        <label>Department/Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimating</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver_License__c</fullName>
        <label>Driver License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Personal__c</fullName>
        <label>Email Personal</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Work__c</fullName>
        <label>Email Work</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extra_Withholding__c</fullName>
        <label>Extra Withholding</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>E_Rating__c</fullName>
        <label>E Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E1-1</fullName>
                </value>
                <value>
                    <fullName>E1-2</fullName>
                </value>
                <value>
                    <fullName>E1-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Dependents__c</fullName>
        <label>Federal Dependents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Marital_Status__c</fullName>
        <label>Federal Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Married using Single Rate</fullName>
                </value>
                <value>
                    <fullName>Head of Household</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_Date_Last__c</fullName>
        <label>Hire Date-Last</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_date_Original__c</fullName>
        <label>Hire date-Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <label>Home City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <label>Home Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Latitude__c</fullName>
        <label>Home Latitude</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Longitude__c</fullName>
        <label>Home Longitude</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State_Province__c</fullName>
        <label>Home State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street2__c</fullName>
        <label>Home Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street__c</fullName>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Zip_Postal_Code__c</fullName>
        <label>Home Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>